update text breaking on about skills

--- a/about.html
+++ b/about.html
@@ -232,14 +232,14 @@
 
           <div class="skills-container-flex">
             <div class="skills-p-wrap">
-              <p class="skills-p about-p">UX Research</p>
-              <p class="skills-p about-p">UI Design</p>
-              <p class="skills-p about-p">Mobile App Design</p>
-              <p class="skills-p about-p">Website Design</p>
+              <p class="skills-p about-p">UX&nbsp;Research</p>
+              <p class="skills-p about-p">UI&nbsp;Design</p>
+              <p class="skills-p about-p">Mobile&nbsp;App Design</p>
+              <p class="skills-p about-p">Website&nbsp;Design</p>
             </div>
 
             <div class="skills-p-wrap">
-              <p class="skills-p about-p">Front-end Development</p>
+              <p class="skills-p about-p">Front-end&nbsp;Development</p>
               <p class="skills-p about-p">HTML5</p>
               <p class="skills-p about-p">CSS3</p>
               <p class="skills-p about-p">JavaScript</p>
@@ -249,11 +249,11 @@
               <p class="skills-p about-p">Figma</p>
               <p class="skills-p about-p">FigJam</p>
               <p class="skills-p about-p">Framer</p>
-              <p class="skills-p about-p">Adobe Illustrator</p>
+              <p class="skills-p about-p">Adobe&nbsp;Illustrator</p>
             </div>
 
             <div class="skills-p-wrap">
-              <p class="skills-p about-p">Vs Code</p>
+              <p class="skills-p about-p">Vs&nbsp;Code</p>
               <p class="skills-p about-p">Git</p>
               <p class="skills-p about-p">Github</p>
               <p class="skills-p about-p">Netlify</p>
