--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Oghonyon</title>
-    <link rel="icon" type="image/jpg" href="assets/img/Preloader Spin.svg" />
+    <link rel="icon" href="assets/img/Preloader Spin.svg" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
