--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
         <div class="work-block-wrap">
           <div class="selected-work-wrap">
             <h3 class="works-block-txt works-block-txt-right">SELECTED</h3>
-            <h3 class="works-block-txt works-block-txt-left">WORK(6)</h3>
+            <h3 class="works-block-txt works-block-txt-left">WORK(7)</h3>
           </div>
           <h3 class="works-block-txt works-block-txt-middle">2022-23</h3>
         </div>
@@ -397,6 +397,106 @@
                       Edekke recently revamped the look of its homepage. I
                       worked with the design team & participated in the redesign
                       project as a Product Design Intern.
+                    </p>
+                  </div>
+
+                  <div class="work-about-role-wrap work-about-role-wrap-botm">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text">ROLE</span>
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      UI DESIGN <br />
+                      PROTOTYPING <br />
+                      FRONT-END DEVELOPMENT
+                    </p>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+          </div>
+
+          <div class="work-container work-container-margin">
+            <div class="work-padding work-padding-no-border">
+              <div class="work-wrap">
+                <div class="header-work-details-wrap">
+                  <h3 class="works-name">Plant Planner</h3>
+                  <div class="work-detials-wrap">
+                    <p class="work-details">NOV ‘22</p>
+                    <p class="work-details">UI DESIGN</p>
+                  </div>
+                </div>
+
+                <span class="stroke"></span>
+
+                <div class="work-button-wrap">
+                  <a
+                    href="https://heathered-golf-99f.notion.site/Plant-Planner-Case-study-236a102c21714ae7b7ba158b799fc21b"
+                    target="_blank"
+                  >
+                    <button
+                      class="feat-work-btn main-btn"
+                      id="proj-4-casestudy"
+                    >
+                      Case Study
+                    </button>
+                  </a>
+                </div>
+              </div>
+
+              <!-- <div class="work-project-desc-container">
+                <div class="work-img-wrap" id="granity"></div>
+
+                <div class="work-about-role-container">
+                  <div class="work-about-role-wrap">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text"
+                          >ABOUT</span
+                        >
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      Admin backend system for an e-commerce website. From the
+                      backend, the admin can view orders, emails & list of all
+                      customers.
                     </p>
                   </div>
 
