change title name

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harry Oghonyon</title>
+    <title>Harry Tones</title>
     <link rel="icon" href="assets/img/Preloader Spin.svg" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
