update about-p text

--- a/about.html
+++ b/about.html
@@ -177,17 +177,33 @@
           </div>
 
           <div class="about-p-wrap">
-            <p class="about-p">
-              I am a product designer & front-end developer based out of Lagos.
-              Started designing out of curiosity and my fascination of the finer
-              details of products. 3 years ago, I kicked off my design career
-              learning how design mobile apps, websites and utilize design
-              systems. Out of my curiosity and wanting to build my designs, I
-              learnt front-end development languages such as HTML, CSS and
-              JavaScript. When I’m not designing or writing code you can find me
-              in the swimming pool doing some crazy moves or watching an
-              interesting movie.
-            </p>
+            <div>
+              <p class="about-p about-p-first">
+                Hey there! Harry Tones at your service. I'm a product designer
+                and front-end developer based in Lagos. Designing has always
+                been a fascination of mine, especially when it comes to the
+                finer details of a product. That's why I started my career as a
+                designer three years ago. Since then, I've been designing mobile
+                apps, websites, and utilizing design systems to create the
+                perfect user experience.
+              </p>
+
+              <p class="about-p about-p-second">
+                But my passion for design didn't stop there. I also wanted to
+                learn how to build my designs from scratch, so I learned
+                front-end development languages like HTML, CSS, and JavaScript.
+                Now I can bring my designs to life and create stunning
+                animations. This is actually a super power most designers wish
+                they had.
+              </p>
+
+              <p class="about-p">
+                When I'm not designing or writing code, you can find me swimming
+                laps of freestyle in the pool, playing FIFA with a friend, or
+                watching an interesting movie. I believe that a balance of work
+                and play is essential for a creative mind like mine.
+              </p>
+            </div>
           </div>
         </div>
       </div>
