--- a/about.html
+++ b/about.html
@@ -180,12 +180,12 @@
             <div>
               <p class="about-p about-p-first">
                 Hey there! Harry Tones at your service. I'm a product designer
-                and front-end developer based in Lagos. Designing has always
-                been a fascination of mine, especially when it comes to the
-                finer details of a product. That's why I started my career as a
-                designer three years ago. Since then, I've been designing mobile
-                apps, websites, and utilizing design systems to create the
-                perfect user experience.
+                and front-end developer based in Lagos, Nigeria. Designing has
+                always been a fascination of mine, especially when it comes to
+                the finer details of a product. That's why I started my career
+                as a designer three years ago. Since then, I've been designing
+                mobile apps, websites, and utilizing design systems to create
+                the perfect user experience.
               </p>
 
               <p class="about-p about-p-second">
