update badge text from skills to stacks

--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
         <div class="skills-wrap">
           <div class="about-badge-wrap">
             <div class="badge-container">
-              <span class="work-about-role-btn badge-text">SKILLS</span>
+              <span class="work-about-role-btn badge-text">STACKS</span>
               <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
                 <g clip-path="url(#clip0_225_76)">
                   <path
