Update project case study links

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
                   </a>
 
                   <a
-                    href="https://heathered-golf-99f.notion.site/Krypt-Labs-Case-stud-a55a28aedb9d4f87b56f2f93daa8dfb4"
+                    href="https://harrytones.notion.site/Krypt-Labs-Case-study-a55a28aedb9d4f87b56f2f93daa8dfb4"
                     target="_blank"
                   >
                     <button
@@ -257,7 +257,7 @@
                     </button>
                   </a>
                   <a
-                    href="https://heathered-golf-99f.notion.site/Wellfed-Case-study-fb9308f5bba4426c9dcb9d47c0ed550e"
+                    href="https://harrytones.notion.site/Wellfed-Case-study-fb9308f5bba4426c9dcb9d47c0ed550e"
                     target="_blank"
                   >
                     <button
@@ -450,7 +450,7 @@
 
                 <div class="work-button-wrap">
                   <a
-                    href="https://heathered-golf-99f.notion.site/Plant-Planner-Case-study-236a102c21714ae7b7ba158b799fc21b"
+                    href="https://harrytones.notion.site/Plant-Planner-Case-study-236a102c21714ae7b7ba158b799fc21b"
                     target="_blank"
                   >
                     <button
@@ -550,7 +550,7 @@
 
                 <div class="work-button-wrap">
                   <a
-                    href="https://heathered-golf-99f.notion.site/Granity-Case-study-9df6387850f243b1bf58e5e4df1f5b12"
+                    href="https://harrytones.notion.site/Granity-Case-study-9df6387850f243b1bf58e5e4df1f5b12"
                     target="_blank"
                   >
                     <button
@@ -650,7 +650,7 @@
 
                 <div class="work-button-wrap">
                   <a
-                    href="https://heathered-golf-99f.notion.site/Thirsti-Case-study-b7e3f96b046c4198849d1c8b6d6b4306"
+                    href="https://harrytones.notion.site/Thirsti-Case-study-b7e3f96b046c4198849d1c8b6d6b4306"
                     target="_blank"
                   >
                     <button
@@ -750,7 +750,7 @@
 
                 <div class="work-button-wrap">
                   <a
-                    href="https://heathered-golf-99f.notion.site/Healthily-Case-study-d95a278817ea4621b647df13a27b1b58"
+                    href="https://harrytones.notion.site/Healthily-Case-study-d95a278817ea4621b647df13a27b1b58"
                     target="_blank"
                   >
                     <button
