Add new text color highlight
and circle between social links

--- a/about.html
+++ b/about.html
@@ -316,8 +316,8 @@
                   target="_blank"
                   >Twitter</a
                 >
-                <span class="social-links hero-p">,</span>
               </div>
+              <img src="./assets/img/links circle.svg" alt="" />
               <div class="link-wrap link-wrap-2">
                 <a
                   class="social-links social-links-2 hero-p"
@@ -325,8 +325,8 @@
                   target="_blank"
                   >Linkedin</a
                 >
-                <span class="social-links hero-p">,</span>
               </div>
+              <img src="./assets/img/links circle.svg" alt="" />
               <div class="link-wrap link-wrap-3">
                 <a
                   class="social-links social-links-3 hero-p"
@@ -365,14 +365,14 @@
                   <a class="social-links social-links-1 hero-p" href=""
                     >Twitter</a
                   >
-                  <span class="social-links hero-p">,</span>
                 </div>
+                <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-2">
                   <a class="social-links social-links-2 hero-p" href=""
                     >Linkedin</a
                   >
-                  <span class="social-links hero-p">,</span>
                 </div>
+                <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-3">
                   <a class="social-links social-links-3 hero-p" href=""
                     >Github</a
