Update left footer with my design and dev credit

--- a/work.html
+++ b/work.html
@@ -860,13 +860,9 @@
       <footer>
         <div class="spotify-back-up-wrap">
           <div class="spotify-playlist-wrap">
-            <img src="/assets/img/Spotify Vector.svg" alt="" />
-            <a
-              href="https://open.spotify.com/playlist/3ZCIou20italOXx8k7sgss?si=4ea2848b9abc4330"
-              class="spotify-txt"
-              target="_blank"
-              >My Spotify Playlist</a
-            >
+            <!-- <img src="/assets/img/Spotify Vector.svg" alt="" /> -->
+            <p class="spotify-txt">Design & DEV by me</p>
+            <img src="./assets/img/rocket.svg" alt="" />
           </div>
           <div class="social-links-container">
             <div class="social-links-wrap">
@@ -877,8 +873,8 @@
                   target="_blank"
                   >Twitter</a
                 >
-                <span class="social-links hero-p">,</span>
               </div>
+              <img src="./assets/img/links circle.svg" alt="" />
               <div class="link-wrap link-wrap-2">
                 <a
                   class="social-links social-links-2 hero-p"
@@ -886,8 +882,8 @@
                   target="_blank"
                   >Linkedin</a
                 >
-                <span class="social-links hero-p">,</span>
               </div>
+              <img src="./assets/img/links circle.svg" alt="" />
               <div class="link-wrap link-wrap-3">
                 <a
                   class="social-links social-links-3 hero-p"
@@ -899,7 +895,7 @@
             </div>
           </div>
           <button
-            id="back-to-top-work-btn"
+            id="back-to-top-btn-abt"
             onclick="scrollToTop()"
             class="back-to-top-btn"
           >
@@ -923,28 +919,19 @@
             <div class="mobile-links-wrap">
               <div class="social-links-wrap">
                 <div class="link-wrap link-wrap-1">
-                  <a
-                    class="social-links social-links-1 hero-p"
-                    href="https://twitter.com/hahrytones"
-                    target="_blank"
+                  <a class="social-links social-links-1 hero-p" href=""
                     >Twitter</a
                   >
-                  <span class="social-links hero-p">,</span>
                 </div>
+                <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-2">
-                  <a
-                    class="social-links social-links-2 hero-p"
-                    href="https://www.linkedin.com/in/harry-oghonyon/"
-                    target="_blank"
+                  <a class="social-links social-links-2 hero-p" href=""
                     >Linkedin</a
                   >
-                  <span class="social-links hero-p">,</span>
                 </div>
+                <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-3">
-                  <a
-                    class="social-links social-links-3 hero-p"
-                    href="https://github.com/harryoghonyon"
-                    target="_blank"
+                  <a class="social-links social-links-3 hero-p" href=""
                     >Github</a
                   >
                 </div>
