--- a/about.html
+++ b/about.html
@@ -299,13 +299,9 @@
       <footer>
         <div class="spotify-back-up-wrap">
           <div class="spotify-playlist-wrap">
-            <img src="/assets/img/Spotify Vector.svg" alt="" />
-            <a
-              href="https://open.spotify.com/playlist/3ZCIou20italOXx8k7sgss?si=4ea2848b9abc4330"
-              class="spotify-txt"
-              target="_blank"
-              >My Spotify Playlist</a
-            >
+            <!-- <img src="/assets/img/Spotify Vector.svg" alt="" /> -->
+            <p class="spotify-txt">Design & DEV by me</p>
+            <img src="./assets/img/rocket.svg" alt="" />
           </div>
           <div class="social-links-container">
             <div class="social-links-wrap">
