update work page heading text

--- a/work.html
+++ b/work.html
@@ -46,8 +46,8 @@
       <div class="work-block-container">
         <div class="work-block-wrap">
           <div class="selected-work-wrap">
-            <h3 class="works-block-txt works-block-txt-right">SELECTED</h3>
-            <h3 class="works-block-txt works-block-txt-left">WORK(7)</h3>
+            <h3 class="works-block-txt works-block-txt-right">FEATURED</h3>
+            <h3 class="works-block-txt works-block-txt-left">WORKS</h3>
           </div>
           <h3 class="works-block-txt works-block-txt-middle">2022-23</h3>
         </div>
