--- a/work.html
+++ b/work.html
@@ -65,6 +65,170 @@
             <div class="work-padding krypt-extra-padding">
               <div class="work-wrap">
                 <div class="header-work-details-wrap">
+                  <h3 class="works-name">Mood Sync</h3>
+                  <div class="work-detials-wrap">
+                    <p class="work-details">AUG ‘23</p>
+                    <p class="work-details">UI DESIGN & DEV</p>
+                  </div>
+                </div>
+
+                <span class="stroke"></span>
+
+                <div class="work-button-wrap">
+                  <a href="https://mood-sync.vercel.app" target="_blank">
+                    <button class="feat-work-btn main-btn" id="proj-1-website">
+                      Live Website
+                    </button>
+                  </a>
+                </div>
+              </div>
+
+              <!-- <div class="work-project-desc-container">
+                <div class="carousel" id="carousel-1">
+                  <div class="image-container large">
+                    <img
+                      src="./assets/img/Preloader mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop section mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/3 screen mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                  </div>
+
+                  <div class="image-container large" aria-hidden="true">
+                    <img
+                      src="./assets/img/Preloader mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop section mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/3 screen mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                  </div>
+
+                  <div class="image-container mobile">
+                    <img
+                      src="./assets/img/Preloader mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/Desktop section mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                    <img
+                      src="./assets/img/3 screen mobile krypt.png"
+                      alt=""
+                      class="slide-image"
+                    />
+                  </div>
+                </div>
+
+                <div class="work-about-role-container">
+                  <div class="work-about-role-wrap">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text"
+                          >ABOUT</span
+                        >
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      A RANDOM DESIGN & DEVELOPMENT EXPLORATION I HAD IN MIND.
+                      WORKING ON THIS PROJECT, I WAS ABLE TO PUT MY DESIGN
+                      SKILLS TO THE TEST AND EVENTUALLY CONVERTED MY DESIGNS TO
+                      WORKING CODE.
+                    </p>
+                  </div>
+
+                  <div class="work-about-role-wrap work-about-role-wrap-botm">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text">ROLE</span>
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      UI DESIGN <br />
+                      PROTOTYPING <br />
+                      FRONT-END DEVELOPMENT
+                    </p>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+          </div>
+
+          <div class="work-container">
+            <div class="work-padding krypt-extra-padding">
+              <div class="work-wrap">
+                <div class="header-work-details-wrap">
                   <h3 class="works-name">Krypt Labs</h3>
                   <div class="work-detials-wrap">
                     <p class="work-details">FEB - MAR ‘23</p>
