update footer links and clean up

--- a/about.html
+++ b/about.html
@@ -308,9 +308,9 @@
               <div class="link-wrap link-wrap-1">
                 <a
                   class="social-links social-links-1 hero-p"
-                  href="https://twitter.com/hahrytones"
+                  href="https://dribbble.com/hahrytones"
                   target="_blank"
-                  >Twitter</a
+                  >Dribbble</a
                 >
               </div>
               <img src="./assets/img/links circle.svg" alt="" />
@@ -358,19 +358,28 @@
             <div class="mobile-links-wrap">
               <div class="social-links-wrap">
                 <div class="link-wrap link-wrap-1">
-                  <a class="social-links social-links-1 hero-p" href=""
-                    >Twitter</a
+                  <a
+                    class="social-links social-links-1 hero-p"
+                    href="https://dribbble.com/hahrytones"
+                    target="_blank"
+                    >Dribbble</a
                   >
                 </div>
                 <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-2">
-                  <a class="social-links social-links-2 hero-p" href=""
+                  <a
+                    class="social-links social-links-2 hero-p"
+                    href="https://www.linkedin.com/in/harry-oghonyon/"
+                    target="_blank"
                     >Linkedin</a
                   >
                 </div>
                 <img src="./assets/img/links circle.svg" alt="" />
                 <div class="link-wrap link-wrap-3">
-                  <a class="social-links social-links-3 hero-p" href=""
+                  <a
+                    class="social-links social-links-3 hero-p"
+                    href="https://github.com/harryoghonyon"
+                    target="_blank"
                     >Github</a
                   >
                 </div>
